--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "signatures",
   "version": "0.1.0",
+  "homepage": "https://YuraKichalo.github.io/SignatureList",
   "private": true,
   "dependencies": {
+    "gh-pages": "^2.1.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.1",
@@ -10,6 +12,8 @@
     "redux": "^4.0.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
